# hackathon_1mg

./: .gitignore  README.md
api/: apiEndpoints.js  apiMockDataMapping.js  index.js
api/mockData/: activityTrackerData.js  basicProfileData.js  goalSelectData.js  homePageData.js  hraData.js  index.js  onboardingData.js  searchData.js  trackerSelectionData.js  wellnessData.js
api/newMockData/: assessmentStart.json  basicProfile.json  challengeDetails.json  goalSelect.json  homePage.json  settings.json  sleepTrackerDetails.json  stepsTrackerDetails.json  trackerSelection.json
api/templates/: activityTracker.json  challengeList.json  meditationTrackerDetails.json  waterTrackerDetails.json  weightTrackerDetails.json
backend/: app.py  config.json  env.example  pyproject.toml  requirements.txt
backend/app/: insert_configs.py
backend/app/db/: config.py  mongo.py
backend/app/models/launchpad/: activity_tracker.py  assessment.py  hra.py  profile.py  user.py  wellness.py
backend/app/routes/: __init__.py  goals.py  home.py  hra.py  onboarding.py  profile.py  trackers.py  user_progress.py  wellness.py
backend/app/routes/v1/: __init__.py  activity.py  navigation.py  wellness_config.py
backend/app/routes/v1/launchpad/: wellness_config.py
backend/app/routes/v2/: activity.py  goals.py  home.py  hra.py  navigation.py  onboarding.py  profile.py  search.py  trackers.py  user_progress.py  wellness.py  wellness_config.py
backend/app/services/: activity_service.py  assessment_service.py  challenge_service.py  fallback_service.py  goal_service.py  goals_service.py  home_service.py  hra_service.py  navigation_service.py  onboarding_service.py  profile_service.py  search_service.py  trackers_service.py  user_progress_service.py  user_service.py  wellness_config_service.py  wellness_service.py
backend/app/services/launchpad/: user_service.py
backend/app/utils/: fallback_decorator.py
